--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -273,3 +273,32 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
     volume = {9},
     year = {1979}
 }
+
+
+@article{citeulike:2570403,
+    abstract = {{Did you ever wonder how Y works and how anyone could ever have thought of it? Do you feel like a Lisp weakling when some heavy-duty Scheme hacker kicks sand in your face by admiring Y in public? In this note I'll try to explain to you not only how it works, but how someone could have invented it. I'll use Scheme notation because it is easier to understand when functions passed as arguments are being applied. At the end, I'll show you Common Lisp equivalents of some of the Scheme code.}},
+    address = {New York, NY, USA},
+    author = {Gabriel, Richard P.},
+    citeulike-article-id = {2570403},
+    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=1317250.1317252},
+    citeulike-linkout-1 = {http://dx.doi.org/10.1145/1317250.1317252},
+    doi = {10.1145/1317250.1317252},
+    issn = {1045-3563},
+    journal = {SIGPLAN Lisp Pointers},
+    keywords = {calculus, lambda},
+    number = {2},
+    pages = {15--25},
+    posted-at = {2010-05-05 09:04:55},
+    priority = {2},
+    publisher = {ACM},
+    title = {{The why of Y}},
+    url = {http://dx.doi.org/10.1145/1317250.1317252},
+    volume = {2},
+    year = {1988}
+}
+
+@MISC{Marlow_haskell2010,
+    author = {Simon Marlow},
+    title = {Haskell 2010 Language Report},
+    year = {}
+}
