--- a/docs/glossary.tex
+++ b/docs/glossary.tex
@@ -46,3 +46,17 @@
     name={ADT},
     description={Algebraic Data Type}
 }
+
+\newglossaryentry{strict}
+{%
+    name={strictness},
+    description={a language is strict if it always evaluates all of the parameters passed to a
+    function. A non-strict, or lazy, language, only evaluates what is specifically required.}
+}
+
+\newglossaryentry{DAG}
+{%
+    name={DAG},
+    description={a directed acyclic graph}
+
+}
