--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -302,3 +302,46 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
     title = {Haskell 2010 Language Report},
     year = {}
 }
+
+@techreport{958,
+author = {Simon Thompson},
+title = {{Regular Expressions and Automata using Haskell}},
+month = {January},
+year = {2000},
+pages = {182-196},
+keywords = {determinacy analysis, Craig interpolants},
+note = {},
+doi = {},
+url = {http://www.cs.kent.ac.uk/pubs/2000/958},
+    institution = {Computing Laboratory, University of Kent},
+    number = {5-00},
+    publication_type = {techreport},
+    submission_id = {23260_948360512},
+    type = {Technical Report},
+}
+
+@inproceedings{Steele:1994:BIC:174675.178068,
+ author = {Steele,Jr., Guy L.},
+ title = {Building Interpreters by Composing Monads},
+ booktitle = {Proceedings of the 21st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '94},
+ year = {1994},
+ isbn = {0-89791-636-0},
+ location = {Portland, Oregon, USA},
+ pages = {472--492},
+ numpages = {21},
+ url = {http://doi.acm.org/10.1145/174675.178068},
+ doi = {10.1145/174675.178068},
+ acmid = {178068},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@TechReport{leijen2001, 
+   Author = {Leijen, Daan},
+   Title = {Parsec, a fast combinator parser},
+   Number = {35},
+   Institution = {Department of Computer Science, University of Utrecht (RUU)},
+   Month = {October},
+   Year = {2001}
+} 
