--- a/docs/report.tex
+++ b/docs/report.tex
@@ -1271,6 +1271,12 @@ result in a number of possible compiler optimisations and greater runtime safety
     \chapter{Comment Markdown}
     \label{appendix:md}
     \input{markdown}
+    \chapter{Using the Repl}
+    \label{appendix:repl}
+    \input{repl}
+    \chapter{Code Samples}
+    \label{appendix:samples}
+    \input{samples}
     \chapter{Diary}
     \label{appendix:diary}
     \input{diary}
