adding syntax description

--- a/docs/repl.tex
+++ b/docs/repl.tex
@@ -1,4 +1,6 @@
-\begin{table}
+The following commands are available in the repl (Table~\ref{tabel:repl}):
+
+\begin{table}[ht]
     \begin{tabu}{l l r}
             Command & Arguments & Purpose \\
             \hline \\
@@ -13,6 +15,8 @@
             :pst & \textit{expr} & Pretty print parse tree to terminal \\
             :pstText & \textit{expr} & Print text form of parse tree \\
     \end{tabu}
-\caption{In repl commands}
+\caption{In-repl commands}
 \label{tabel:repl}
 \end{table}
+
+Interactions in the repl are \textbf{line-orientated}. Multiline input is not yet supported.
