--- a/docs/syntax.tex
+++ b/docs/syntax.tex
@@ -18,6 +18,8 @@ MicroML has a full complement of operators. Table~\ref{table:operators}
         $<=$  & less than or equal \\
         $>$   & greater than \\
         $>=$  & greater than or equal \\
+        $:$ & cons \\
+        $++$ & joins lists or strings \\
         \textasciicircum & exponential \\
         \%  & integer modulo \\
         $>>$  & pipe operator \\
