added code samples section

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -1278,7 +1278,7 @@ result in a number of possible compiler optimisations and greater runtime safety
     \input{repl}
     \chapter{Code Samples}
     \label{appendix:samples}
-    \input{samples}
+    \input{codeSamples}
     \chapter{Diary}
     \label{appendix:diary}
     \input{diary}
