--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -39,11 +39,13 @@
 }
 
 @book{rwh,
-    author={O'Sullivan Bryan, John Goerzen and Don Stewart},
-    title={Real World Haskell},
-    publisher={O'Reilly},
-    year=2009
-}
+ author = {O'Sullivan, Bryan and Goerzen, John and Stewart, Don},
+ title = {Real World Haskell},
+ year = {2008},
+ isbn = {0596514980, 9780596514983},
+ edition = {1st},
+ publisher = {O'Reilly Media, Inc.},
+} 
 
 @book{plp,
     author={Scott, Michael L},
@@ -53,10 +55,13 @@
     year=2016
 }
 
-@misc{frob,
-    author={Peterson, John, Paul Hudak and Conal Elliot},
-    title={Lambda in Motion: Controlling Robots With Haskell}
-}
+@InProceedings{frob,  
+    author ={John Peterson and Paul Hudak and Conal Elliott},  
+    title = {Lambda in Motion: Controlling Robots with Haskell},  
+    booktitle = {First International Workshop on Practical Aspects of Declarative Languages~(PADL)},  
+    year=1999,  
+    month = {January}
+} 
 
 @inproceedings{adams2012layout,
   author = {Adams, Michael D.},
@@ -181,25 +186,25 @@ url="http://dx.doi.org/10.1007/BFb0014054"
 @misc{scheme,
     author= {Tang, Jonathan},
     title= {Write yourself a Scheme in 48 hours},
-    url={https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours}
+    publisher={https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours}
 }
 
 @misc{diehl,
     author = {Diehl, Stephen},
     title = {Write you a Haskell},
-    url = {http://dev.stephendiehl.com/fun/},
+    publisher = {http://dev.stephendiehl.com/fun/},
 }
 
 @misc{algoW,
     author = {Martin Grabmuller},
     title = {Algorithm W},
-    url = {https://github.com/mgrabmueller/AlgorithmW/blob/master/AlgorithmW.lhs},
+    publisher = {https://github.com/mgrabmueller/AlgorithmW/blob/master/AlgorithmW.lhs},
 }
 
 @misc{transformers,
     author = {Martin Grabmuller},
     title = {Transformers Step By Step},
-    url = {https://github.com/mgrabmueller/TransformersStepByStep},
+    publisher = {https://github.com/mgrabmueller/TransformersStepByStep},
 }
 
 @book{Pierce:2004:ATT:1076265,
@@ -244,7 +249,7 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
 @book{Friedman1900,
     author = "Friedman and Felleisen",
     title = "The little schemer",
-    keywords = "book.computers",
+    keywords = "book.computers"
 }
 
 @inproceedings{Wadler:1995:MFP:647698.734146,
@@ -345,3 +350,14 @@ url = {http://www.cs.kent.ac.uk/pubs/2000/958},
    Month = {October},
    Year = {2001}
 } 
+
+@book{opac-b1081362,
+   title = "Type theory and functional programming",
+   author = "Thompson, Simon",
+   series = "International computer science series",
+   publisher = "Addison-Wesley",
+   address = "Wokingham (GB)",
+   url = "http://opac.inria.fr/record=b1081362",
+   isbn = "0-201-41667-0",
+   year = 1991
+}
