--- a/docs/syntax.tex
+++ b/docs/syntax.tex
@@ -3,8 +3,8 @@
 MicroML has a full complement of operators. Table~\ref{table:operators}
 
 \begin{table}
-    \resizebox{\textwidth}{!}
-    {\begin{tabu}{l r}
+   % \resizebox{\textwidth}{!}
+    \begin{tabu}{l r}
         Operator & Action \\
         \hline
         +   & addition \\
@@ -30,7 +30,7 @@ MicroML has a full complement of operators. Table~\ref{table:operators}
         and & logical and \\
         not & logical not \\
         xor & logical xor \\
-    \end{tabu}}
+    \end{tabu}
     \caption{MicroML\@: arithmetical and logical operators}
 \label{table:operators}
 \end{table}
